[gd_scene load_steps=5 format=2]

[ext_resource path="res://Data/Videos/filmBoot.ogv" type="VideoStream" id=1]
[ext_resource path="res://Scripts/scrBoot.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 180, 320 )

[sub_resource type="Animation" id=2]
resource_name = "anmInit"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("btnSkip:shape")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ null, SubResource( 1 ) ]
}

[node name="scnBoot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="videoBoot" type="VideoPlayer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -180.0
margin_right = 180.0
margin_bottom = 180.0
stream = ExtResource( 1 )
autoplay = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnSkip" type="TouchScreenButton" parent="."]

[node name="anmInit" type="AnimationPlayer" parent="."]
autoplay = "anmInit"
anims/anmInit = SubResource( 2 )

[connection signal="finished" from="videoBoot" to="." method="_on_vpBoot_finished"]
[connection signal="released" from="btnSkip" to="." method="_on_btnSkip_released"]
